--- a/index.html
+++ b/index.html
@@ -6,82 +6,48 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <meta name="theme-color" content="#0d1117" />
   <link rel="manifest" href="manifest.webmanifest" />
-  
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
-  
   <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
-  
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-  
   <link rel="stylesheet" href="./css/main.css" />
 </head>
 <body>
 
 <div id="auth-screen">
   <div class="auth-container">
-    <div class="auth-brand">
-      <div class="bee-icon">🐝</div>
-      <h1>SeeBee</h1>
-    </div>
+    <div class="auth-brand"><div class="bee-icon">🐝</div><h1>SeeBee</h1></div>
     <div class="auth-card">
       <h2>Entrar</h2>
-      <div class="input-group">
-        <label for="auth-email">E-mail</label>
-        <input id="auth-email" type="email" placeholder="seu@email.com" autocomplete="email" />
-      </div>
-      <div class="input-group">
-        <label for="auth-password">Senha</label>
-        <input id="auth-password" type="password" placeholder="Sua senha" autocomplete="current-password" />
-      </div>
+      <div class="input-group"><label for="auth-email">E-mail</label><input id="auth-email" type="email" placeholder="seu@email.com" autocomplete="email" /></div>
+      <div class="input-group"><label for="auth-password">Senha</label><input id="auth-password" type="password" placeholder="Sua senha" autocomplete="current-password" /></div>
       <button class="btn-primary-full" id="btn-signin">Entrar</button>
       <div class="auth-divider">ou</div>
       <button class="btn-outline-full" id="btn-signup">Criar Conta</button>
-      <button class="btn-google-full" id="btn-google">
-        <span class="g-icon"></span> <span>Entrar com Google</span>
-      </button>
+      <button class="btn-google-full" id="btn-google"><span class="g-icon"></span> <span>Entrar com Google</span></button>
       <div id="auth-msg" class="auth-msg"></div>
     </div>
   </div>
 </div>
 
 <div id="app-screen" class="hidden">
-  
   <aside id="sidebar" class="sidebar hidden-mobile">
     <div class="sidebar-header">
       <div class="user-avatar">U</div>
-      <div class="user-info-box">
-        <span class="user-name" id="user-email-label">Usuário</span>
-        <span class="user-role">ADMINISTRADOR</span>
-      </div>
+      <div class="user-info-box"><span class="user-name" id="user-email-label">Usuário</span><span class="user-role">ADMINISTRADOR</span></div>
       <button id="close-sidebar" class="mobile-close-btn">✕</button>
     </div>
-
     <nav class="sidebar-nav">
-      <a href="#" class="nav-item active" data-target="dashboard">
-        <span class="icon">🏠</span> Início
-      </a>
-      <a href="#" class="nav-item" data-target="tracker">
-        <span class="icon">🗺️</span> Instalar Ninhos
-      </a>
-      <a href="#" class="nav-item" data-target="colonies">
-        <span class="icon">📦</span> Minhas Colônias
-      </a>
-      <a href="#" class="nav-item disabled" id="nav-capturas">
+      <a href="#" class="nav-item active" data-target="dashboard"><span class="icon">🏠</span> Início</a>
+      <a href="#" class="nav-item" data-target="tracker"><span class="icon">🗺️</span> Instalar Ninhos</a>
+      <a href="#" class="nav-item" data-target="colonies"><span class="icon">📦</span> Minhas Colônias</a>
+      <a href="#" class="nav-item" data-target="captures" id="nav-capturas">
         <span class="icon">🐝</span> Capturas
-        </a>
-      <a href="#" class="nav-item disabled">
-        <span class="icon">👤</span> Perfil
+        <span id="badge-capturas" class="nav-badge hidden">0</span>
       </a>
+      <a href="#" class="nav-item disabled"><span class="icon">👤</span> Perfil</a>
     </nav>
-
-    <div class="sidebar-footer">
-      <button id="btn-logout" class="nav-item logout">
-        <span class="icon">🚪</span> Sair
-      </button>
-    </div>
+    <div class="sidebar-footer"><button id="btn-logout" class="nav-item logout"><span class="icon">🚪</span> Sair</button></div>
   </aside>
 
   <main class="main-content">
@@ -94,31 +60,22 @@
     <div id="panel-dashboard" class="content-panel">
       <div class="dashboard-head"><h1>SeeBee</h1></div>
       <div class="cards-grid">
-        <div class="dashboard-card" id="card-goto-tracker">
-          <div class="card-icon">🗺️</div><h3>Nova Instalação</h3><p>Ir para mata</p>
-        </div>
-        <div class="dashboard-card" id="card-goto-colonies">
-          <div class="card-icon">📦</div><h3>Colônias</h3><p>Gestão</p>
-        </div>
-        <div class="dashboard-card disabled">
+        <div class="dashboard-card" id="card-goto-tracker"><div class="card-icon">🗺️</div><h3>Nova Instalação</h3><p>Ir para mata</p></div>
+        <div class="dashboard-card" id="card-goto-colonies"><div class="card-icon">📦</div><h3>Colônias</h3><p>Gestão</p></div>
+        <div class="dashboard-card" id="card-goto-captures">
           <div class="card-icon">🐝</div><h3>Capturas</h3><p>Maturação</p>
+          <div id="card-badge-captures" class="card-badge hidden">0</div>
         </div>
-         <div class="dashboard-card disabled"><div class="card-icon">👤</div><h3>Perfil</h3><p>Dados</p></div>
+        <div class="dashboard-card disabled"><div class="card-icon">👤</div><h3>Perfil</h3><p>Dados</p></div>
       </div>
     </div>
 
     <div id="panel-tracker" class="content-panel hidden">
-      <div class="panel-top-bar">
-        <h2>Instalador de Ninhos</h2>
-        <div class="status-pill" id="status-pill"><span class="status-dot"></span><span id="cloud-status">Online</span></div>
-      </div>
+      <div class="panel-top-bar"><h2>Instalador de Ninhos</h2><div class="status-pill" id="status-pill"><span class="status-dot"></span><span id="cloud-status">Online</span></div></div>
       <div class="tracker-layout">
         <div class="tracker-sidebar">
           <div class="control-box">
-            <div class="status-row">
-              <span class="badge" id="badge-status">Parado</span>
-              <span id="info-gps" class="gps-status">GPS: aguardando...</span>
-            </div>
+            <div class="status-row"><span class="badge" id="badge-status">Parado</span><span id="info-gps" class="gps-status">GPS: aguardando...</span></div>
             <div class="action-buttons">
               <button class="btn-action start" id="btn-toggle-route"><span id="btn-toggle-icon">▶</span><span id="btn-toggle-text">Iniciar trajeto</span></button>
               <button class="btn-action mark" id="btn-add-nest" disabled>📍 Marcar Ninho</button>
@@ -133,10 +90,7 @@
         <div class="map-container"><div id="map"></div></div>
       </div>
       <div class="tracker-footer-summary">
-        <div class="section-title-row">
-          <h3>Última Atividade</h3>
-          <button class="btn-link" id="btn-view-all-history">Ver Histórico Completo →</button>
-        </div>
+        <div class="section-title-row"><h3>Última Atividade</h3><button class="btn-link" id="btn-view-all-history">Ver Histórico Completo →</button></div>
         <div id="latest-route-container"><div class="empty-placeholder">Nenhuma instalação recente.</div></div>
       </div>
     </div>
@@ -152,10 +106,15 @@
         <div class="empty-state-box"><p>Nenhuma matriz cadastrada ainda.</p></div>
       </div>
       <div id="content-history" class="hidden">
-        <div class="history-controls">
-           <button class="btn-icon-refresh" id="btn-refresh-history">🔄 Atualizar Lista</button>
-        </div>
+        <div class="history-controls"><button class="btn-icon-refresh" id="btn-refresh-history">🔄 Atualizar Lista</button></div>
         <div id="full-history-list"></div>
+      </div>
+    </div>
+
+    <div id="panel-captures" class="content-panel hidden">
+      <div class="panel-top-bar"><h2>Minhas Capturas</h2></div>
+      <div id="captures-list">
+        <div class="empty-placeholder">Nenhuma captura ativa no momento.</div>
       </div>
     </div>
   </main>
@@ -170,23 +129,16 @@
       </div>
       <button id="photo-modal-close" class="btn-icon-close">✕</button>
     </div>
-    
-    <div class="photo-container">
-      <img id="photo-modal-img" src="" alt="Foto do ninho" />
-    </div>
-
+    <div class="photo-container"><img id="photo-modal-img" src="" alt="Foto do ninho" /></div>
     <div id="edit-nest-form" class="edit-form hidden">
       <div class="form-group">
         <label>Status Atual</label>
         <select id="edit-status-select">
           <option value="catalogado">Catalogado</option>
           <option value="capturado">Capturado 🐝</option>
-          </select>
+        </select>
       </div>
-      <div class="form-group">
-        <label>Observações</label>
-        <textarea id="edit-notes"></textarea>
-      </div>
+      <div class="form-group"><label>Observações</label><textarea id="edit-notes"></textarea></div>
       <div class="form-actions">
         <button id="btn-cancel-edit" class="btn-secondary-sm">Cancelar</button>
         <button id="btn-save-edit" class="btn-primary-sm">Salvar Alterações</button>
@@ -199,25 +151,12 @@
   <div class="modal-card">
     <div class="modal-header"><h4>Marcar Ninho</h4></div>
     <div class="modal-body">
-      <div class="form-group">
-        <label>Observações</label>
-        <textarea id="nest-notes" placeholder="Ex: Árvore alta..."></textarea>
-      </div>
-      <div class="form-group">
-        <label class="file-upload-btn">
-          📷 <span>Tirar foto ou escolher</span>
-          <input id="nest-file-input" type="file" accept="image/*" capture="environment" />
-        </label>
-        <div id="nest-file-name" class="file-name-display"></div>
-      </div>
+      <div class="form-group"><label>Observações</label><textarea id="nest-notes" placeholder="Ex: Árvore alta..."></textarea></div>
+      <div class="form-group"><label class="file-upload-btn">📷 <span>Tirar foto ou escolher</span><input id="nest-file-input" type="file" accept="image/*" capture="environment" /></label><div id="nest-file-name" class="file-name-display"></div></div>
     </div>
-    <div class="modal-footer">
-      <button class="btn-secondary-sm" id="nest-cancel">Cancelar</button>
-      <button class="btn-primary-sm" id="nest-save">Salvar</button>
-    </div>
+    <div class="modal-footer"><button class="btn-secondary-sm" id="nest-cancel">Cancelar</button><button class="btn-primary-sm" id="nest-save">Salvar</button></div>
   </div>
 </div>
-
 <script type="module" src="./js/app.js"></script>
 </body>
 </html>
