--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
       </div>
       
       <div class="form-group hidden" id="species-group">
-         <label>Espécie (Pesquisa Inteligente)</label>
-         <input type="text" id="edit-species-input" list="species-list" placeholder="Digite para buscar..." />
+         <label>Espécie Identificada</label>
+         <input type="text" id="edit-species-input" list="species-list" placeholder="Busque ou digite..." />
          <datalist id="species-list">
              </datalist>
       </div>
